test/fail/generated/test_operator_add_broadcast/model.pb
pytorch0.3:o
 
0
13"Add*
	broadcast torch-jit-exportZ
0


Z
1


b
3


B